--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
+* {
+  user-select: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.scenery {
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#foreground1,
+#foreground2 {
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+#foreground2,
+#background2 {
+  transform: translateX(100%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#sun {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.giphy-embed-sun {
+  position: absolute;
+  right: 50vw;
+}
+
+#palm3 {
+  top: 120px;
+  left: 10%;
+  height: 500px;
+  bottom: 0;
+}
+
+#w_rook_upright {
+  top: 55%;
+  width: 30%;
+  left: 75%;
+}
+
+#r_pawn {
+  top: -15%;
+  width: 10%;
+  left: 15%;
+}
+
+#w_rook {
+  top: 10%;
+  left: 80%;
+  width: 30%;
+}
+
+#r_pawn_upright {
+  top: 5%;
+  left: 30%;
+  width: 10%;
+}
+
+#r_knight {
+  top: 5%;
+  left: 0%;
+  width: 13%;
+}
+
+#palm2 {
+  top: -15%;
+  left: 90%;
+  width: 10%;
+}
+
+#palm1 {
+  top: -15%;
+  left: 40%;
+  width: 20%;
+}
+
+#bush {
+  top: 82%;
+  left: 20%;
+  width: 10%;
+}
+
+#red-queen_and_alice {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  width: 80%;
+  max-width: 450px;
+  z-index: 1;
+}
+
+#red-queen_and_alice:before {
+  content: ' ';
+  display: block;
+  padding-top: 87%;
+}
+
+#red-queen_and_alice img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.sky,
+.earth {
+  position: absolute;
+  left: 0;
+  height: 50vh;
+  width: 100%;
+}
+
+.earth {
+  background: #eb125d
+    url('https://images.unsplash.com/photo-1524893829393-a74a8c51c635?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1566&q=80')
+    repeat-x 0 0 / 100% auto;
+  bottom: 0;
+}
+
+.sky {
+  background: #246e89
+    url('https://images.unsplash.com/photo-1464720985864-3441cf6da383?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=755&q=80')
+    repeat-x 100% 100% / auto 100%;
+  top: 0;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
 }
